Wed Oct 15 15:21:43 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* checkout.c (checkout_proc): Add comment about assuming '/' is
	the only path separator.
	* options.h.in: Fix thinko (CVS/Repository -> CVS/Root).

Mon Oct 13 22:46:03 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (commit): Add comment about CVS_BADROOT and command
	other than "commit".

1997-10-11  Noel Cragg  <noel@swish.red-bean.com>

	* options.h.in: RELATIVE_REPOS has been checked for bitrot -- it
	now works again.  Change the comment before the #define to say
	that we'll be switching to it soon.

	* sanity.sh (basicb-1, basicb-1a): update dotest strings to match
	no matter if we're running with RELATIVE_REPOS defined or not.
	(basicb-9b, basicb-9c): same.

	* sanity.sh (basicb-9b, basicb-9c): modified tests, since the
	checkout.c fix changes the way this test module is checked out.
	(basicb-9d, basicb-9e, basicb-9f): new tests, same.
	(basicb-18): modify test, same.
	(cvsadm): new set of exhaustive tests to check the contents of
	CVS/Root and CVS/Repository files under various conditions.  As a
	side effect, it tests the behavior of the "-d" flags (command line
	and modules file).
	(modules3-7e through modules3-7h): removed, since these tests were
	a small subset of what is tested in the new cvsadm section.
	(modules-1b, modules-1c): same.
	(modules-2b, modules-2c): same.
	(modules-3b, modules-3c, modules-3e, modules-3f): same.

	* create_adm.c (Create_Admin): be a bit more verbose when using
	trace mode.

	* checkout.c (checkout_proc): rewrote the code that sets the where
	variable and the code that matches directory names with repository
	directories.  This fixes a long-standing bug in CVS.  (It used to
	be the case that "cvs co -d foo <mod1> <mod2>" would not properly,
	where <mod1> and <mod2> where defined in the modules file.  While
	the first module would be checked out correctly, the second would
	be checked out under the name of the directory to which the module